desktop version done, minor bug fixing on text hover flickering

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,13 @@ body {
 	width: 37px;
 	height: 15px;
 }
+
+.spinner {
+	animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+	100% {
+	  transform: rotate(360deg);
+	}
+}
